<resources>
    <string name="app_name">My Application</string>
    <string name="button_small">Like!</string>
    <string name="button_large">Follow!</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_percentage">%</string>
    <string name="button_equal">=</string>
    <string name="button_register">Register</string>
    <string name="button_logIn">LogIn</string>
    <string name="login_error">Login Error</string>
    <string name="password_error">Wrong Password!</string>
    <string name="email_error">Wrong Email!</string>
    <string name="login_success">Successful login!</string>
    <string name="register_success">Registered successfully!</string>
    <string name="welcome">Benvenuto </string>
    <string name="buy">Buy!</string>
    <string name="total">Total</string>
    <string name="euro">€</string>
</resources>
